[project]
name = "kaf-chat"
version = "0.2.0"
description = "Kafka-Chat"
authors = [
    {name = "whitecapella", email = "02@naver.com"},
    {name = "WhiteCapella", email = "whitecapella@naver.com"},
]
dependencies = [
    "kafka-python>=2.0.2",
    "keyboard>=0.13.5",
]
requires-python = ">=3.8"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false

[tool.pdm.dev-dependencies]
pytest = []
test = [
    "pytest>=8.3.2",
]

[tool.pytest.ini_optorns]
pythonpath = "src"

[project.scripts]
kchat-ping = 'kaf_chat.cli:ping'

