[project]
name = "kaf-chat"
version = "0.2.1"
description = "Kafka-Chat"
authors = [
    {name = "whitecapella", email = "whitecapella@naver.com"},
]
dependencies = [
    "kafka-python>=2.0.2",
    "keyboard>=0.13.5",
]
requires-python = ">=3.8"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false

[tool.pdm.dev-dependencies]
pytest = []
test = [
    "pytest>=8.3.2",
]

[tool.pytest.ini_optorns]
pythonpath = "src"

[project.scripts]
kchat-ping = 'kaf_chat.cli:ping'
kchat-s = 'kaf_chat.kafka.pro:send_message'
kchat-r = 'kaf_chat.kafka.con:receive_message'
